// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sequelizeFindByCursor does not include extra PK in ORDER BY if it’s already present: nodes 1`] = `
[
  {
    "firstName": "Alan",
    "id": 5,
    "lastName": "LastName",
  },
  {
    "firstName": "Bernard",
    "id": 4,
    "lastName": "LastName",
  },
  {
    "firstName": "Cedric",
    "id": 3,
    "lastName": "Anderson",
  },
  {
    "firstName": "Cedric",
    "id": 2,
    "lastName": "Brown",
  },
  {
    "firstName": "Dimitri",
    "id": 6,
    "lastName": "LastName",
  },
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor does not include extra PK in ORDER BY if it’s already present: query 1`] = `"Executing (default): SELECT "User".* FROM (SELECT "first_name" AS "firstName", "last_name" AS "lastName", "id" FROM "Users" AS "User" ORDER BY "User"."first_name" ASC, "User"."last_name" ASC, "User"."id" DESC LIMIT 11) AS "User" ORDER BY "firstName" ASC, "lastName" ASC, "User"."id" DESC;"`;

exports[`sequelizeFindByCursor includes PK in ORDER BY to ensures constant order: nodes 1`] = `
[
  {
    "firstName": "Alan",
    "id": 5,
    "lastName": "LastName",
  },
  {
    "firstName": "Bernard",
    "id": 4,
    "lastName": "LastName",
  },
  {
    "firstName": "Cedric",
    "id": 3,
    "lastName": "Anderson",
  },
  {
    "firstName": "Cedric",
    "id": 2,
    "lastName": "Brown",
  },
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
  {
    "firstName": "Dimitri",
    "id": 6,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor includes PK in ORDER BY to ensures constant order: query 1`] = `"Executing (default): SELECT "User".* FROM (SELECT "first_name" AS "firstName", "last_name" AS "lastName", "id" FROM "Users" AS "User" ORDER BY "User"."first_name" ASC, "User"."last_name" ASC, "User"."id" ASC LIMIT 11) AS "User" ORDER BY "firstName" ASC, "lastName" ASC, "User"."id" ASC;"`;

exports[`sequelizeFindByCursor supports filtering: nodes 1`] = `
[
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
  {
    "firstName": "Dimitri",
    "id": 6,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor supports filtering: query 1`] = `"Executing (default): SELECT "User".* FROM (SELECT "first_name" AS "firstName", "last_name" AS "lastName", "id" FROM "Users" AS "User" WHERE "User"."birth_date" >= '1990-01-01' AND ("User"."first_name" > 'Bernard' OR ("User"."first_name" = 'Bernard' AND ("User"."last_name" > 'LastName' OR ("User"."last_name" = 'LastName' AND "User"."id" > 4)))) ORDER BY "User"."first_name" ASC, "User"."last_name" ASC, "User"."id" ASC LIMIT 11) AS "User" ORDER BY "firstName" ASC, "lastName" ASC, "User"."id" ASC;"`;

exports[`sequelizeFindByCursor supports filtering: query 2`] = `"Executing (default): SELECT "User".* FROM (SELECT "first_name" AS "firstName", "last_name" AS "lastName", "id" FROM "Users" AS "User" WHERE "User"."birth_date" >= '1990-01-01' AND ("User"."first_name" < 'Bernard' OR ("User"."first_name" = 'Bernard' AND ("User"."last_name" < 'LastName' OR ("User"."last_name" = 'LastName' AND "User"."id" < 4)))) ORDER BY "User"."first_name" DESC, "User"."last_name" DESC, "User"."id" DESC LIMIT 1) AS "User" ORDER BY "firstName" DESC, "lastName" DESC, "User"."id" DESC;"`;

exports[`sequelizeFindByCursor supports returning the first x elements after another cursor: nodes 1`] = `
[
  {
    "firstName": "Cedric",
    "id": 2,
    "lastName": "Brown",
  },
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor supports returning the first x elements before another cursor: nodes 1`] = `
[
  {
    "firstName": "Alan",
    "id": 5,
    "lastName": "LastName",
  },
  {
    "firstName": "Bernard",
    "id": 4,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor supports returning the first x elements of the set: nodes 1`] = `
[
  {
    "firstName": "Alan",
    "id": 5,
    "lastName": "LastName",
  },
  {
    "firstName": "Bernard",
    "id": 4,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor supports returning the last x elements after another cursor: nodes 1`] = `
[
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
  {
    "firstName": "Dimitri",
    "id": 6,
    "lastName": "LastName",
  },
]
`;

exports[`sequelizeFindByCursor supports returning the last x elements before another cursor: nodes 1`] = `
[
  {
    "firstName": "Cedric",
    "id": 3,
    "lastName": "Anderson",
  },
  {
    "firstName": "Cedric",
    "id": 2,
    "lastName": "Brown",
  },
]
`;

exports[`sequelizeFindByCursor supports returning the last x elements of the set: nodes 1`] = `
[
  {
    "firstName": "Dimitri",
    "id": 1,
    "lastName": "LastName",
  },
  {
    "firstName": "Dimitri",
    "id": 6,
    "lastName": "LastName",
  },
]
`;
